<resources>
    <string name="app_name">Register And  Login</string>
    <string name="action_settings">Setting</string>
    <string name="signup">Sign Up</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="register_later">Register Later</string>
    <string name="sign_up_Agreement">By signing up, you confirm that you accept the <a href="">User Agreement</a> and <a hreh="">terms of service</a></string>
    <string name="action_how_it_work">How It Work</string>
    <string name="title_activity_login">Log in</string>
    <string name="login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
