<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_root"
    android:transitionName="activity_root"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:backgroundTint="#4d000000"
    android:backgroundTintMode="src_over"

    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="android.alcode.com.material.signup.SignupActivity">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_weight="1">


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_with_facebook"
                    style="@style/SocialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_with_facebook" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/login_with_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="9dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/buttonsignup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="9dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:text="@string/signup"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/button2"
                    style="@style/SocialButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_border"
                    android:text="@string/register_later"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:layout_margin="30dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_Agreement"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginBottom="44dp"
                android:gravity="center_horizontal"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>